--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "image-webpack-loader": "^4.2.0",
     "nodemon": "^1.17.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "style-loader": "^0.20.3",
     "webpack": "^4.5.0"
   },
   "devDependencies": {
