--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Josh",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.42",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
@@ -22,10 +23,13 @@
     "body-parser": "^1.18.2",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "fontawesome": "^4.7.2",
     "image-webpack-loader": "^4.2.0",
+    "material-ui": "^1.0.0-beta.41",
     "nodemon": "^1.17.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-fontawesome": "^1.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.20.3",
